--- a/RideTest.html
+++ b/RideTest.html
@@ -20,6 +20,8 @@ body {
     letter-spacing: auto;
     line-height: auto;
     margin: 2.5% 20% 15%;
+        max-width: 2480px;
+    width:100%;
   }
   h1 {
   	font-family: 'VT323', monospace;
@@ -52,7 +54,8 @@ body {
 }
 #content {
     background: #FFFFFF;
-    width: 100%;
+     max-width: 2480px;
+    width:100%;
 }
   #table{
     max-width: 2480px;
@@ -82,79 +85,80 @@ body {
 <a href="#TravelParty">Travel Party</a>
  <h1>Injury Reserve Production Advance</h1>
 <hr />
-<table border="1" style="border-collapse: collapse; width: 100%;">
-<tbody>
-<tr>
-<td style="width: 50%;">
-<p></p>
-<table border="0" style="width: 90%; border-collapse: collapse; margin-left: 1%; margin-right: 1%;">
-<tbody>
-<tr>
-<td style="width: 50%; text-align: right;">
+
+<div class="divTable">
+<div class="divTableBody">
+<div class="divTableRow">
+<div class="divTableCell">
+<p>&nbsp;</p>
+<div class="divTable">
+<div class="divTableBody">
+<div class="divTableRow">
+<div class="divTableCell">
 <p><strong>Artist&nbsp;Manager:&nbsp; &nbsp;</strong></p>
-<p></p>
-<p></p>
-</td>
-<td style="width: 50%;">
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+</div>
+<div class="divTableCell">
 <p>Nick Herbert<br />nherbertaz@gmail.com<br />(480) 433-1104</p>
-<p></p>
-</td>
-</tr>
-<tr>
-<td style="width: 50%; text-align: right;">
+<p>&nbsp;</p>
+</div>
+</div>
+<div class="divTableRow">
+<div class="divTableCell">
 <p><strong>Tour / Production Manager:&nbsp; &nbsp;</strong></p>
-<p></p>
-</td>
-<td style="width: 50%;">
+<p>&nbsp;</p>
+</div>
+<div class="divTableCell">
 <p>Will Hasty<br />wHasty@NoBilling.Info<br />(773) 234-2789</p>
-</td>
-</tr>
-</tbody>
-</table>
-<p></p>
-</td>
-<td style="width: 50%;">
-<table border="0" style="height: 63px; width: 90%; border-collapse: collapse; margin-left: auto; margin-right: auto;">
-<tbody>
-<tr style="height: 21px;">
-<td style="width: 50%; height: 21px; text-align: right;"><strong>Artist:&nbsp; &nbsp;</strong></td>
-<td style="width: 50%; height: 21px;">Parker Corey (Producer)</td>
-</tr>
-<tr style="height: 21px;">
-<td style="width: 50%; height: 21px;"></td>
-<td style="width: 50%; height: 21px;">Nathaniel Ritchie (Vocals)</td>
-</tr>
-<tr style="height: 21px;">
-<td style="width: 50%; height: 21px;"></td>
-<td style="width: 50%; height: 21px;">Jordan Groggs (Vocals)</td>
-</tr>
-</tbody>
-</table>
+</div>
+</div>
+</div>
+</div>
+<p>&nbsp;</p>
+</div>
+<div class="divTableCell">
+<div class="divTable">
+<div class="divTableBody">
+<div class="divTableRow">
+<div class="divTableCell"><strong>Artist:&nbsp; &nbsp;</strong></div>
+<div class="divTableCell">Parker Corey (Producer)</div>
+</div>
+<div class="divTableRow">
+<div class="divTableCell">&nbsp;</div>
+<div class="divTableCell">Nathaniel Ritchie (Vocals)</div>
+</div>
+<div class="divTableRow">
+<div class="divTableCell">&nbsp;</div>
+<div class="divTableCell">Jordan Groggs (Vocals)</div>
+</div>
+</div>
+</div>
 &nbsp;
-<table border="0" style="height: 84px; width: 90%; border-collapse: collapse; margin-left: auto; margin-right: auto;">
-<tbody>
-<tr style="height: 21px;">
-<td style="width: 50%; height: 21px; text-align: center;"><span style="text-decoration: underline;"><strong>Social Media</strong></td>
-<td style="width: 50%; height: 21px; text-align: center;"><span style="text-decoration: underline;"><strong>Identifier</strong></td>
-</tr>
-<tr style="height: 21px;">
-<td style="width: 50%; height: 21px; text-align: center;">Website</td>
-<td style="width: 50%; height: 21px;">http://injuryreserve.online/</td>
-</tr>
-<tr style="height: 21px;">
-<td style="width: 50%; height: 21px; text-align: center;">Instagram</td>
-<td style="width: 50%; height: 21px;"><span>@InjuryReserve</span></td>
-</tr>
-<tr style="height: 21px;">
-<td style="width: 50%; height: 21px; text-align: center;">Twitter</td>
-<td style="width: 50%; height: 21px;"><span>@InjuryReserve</span></td>
-</tr>
-</tbody>
-</table>
-</td>
-</tr>
-</tbody>
-</table>
+<div class="divTable">
+<div class="divTableBody">
+<div class="divTableRow">
+<div class="divTableCell"><span style="text-decoration: underline;"><strong>Social Media</strong></span></div>
+<div class="divTableCell"><span style="text-decoration: underline;"><strong>Identifier</strong></span></div>
+</div>
+<div class="divTableRow">
+<div class="divTableCell">Website</div>
+<div class="divTableCell">http://injuryreserve.online/</div>
+</div>
+<div class="divTableRow">
+<div class="divTableCell">Instagram</div>
+<div class="divTableCell">@InjuryReserve</div>
+</div>
+<div class="divTableRow">
+<div class="divTableCell">Twitter</div>
+<div class="divTableCell">@InjuryReserve</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
 
 <div id="KeyInfo"><h2>Key Info</h2></div>
 <hr />
