--- a/RideTest.html
+++ b/RideTest.html
@@ -21,7 +21,7 @@ body {
     line-height: auto;
     margin: 2.5% 20% 15%;
         max-width: 2480px;
-    width:100%;
+    
   }
   h1 {
   	font-family: 'VT323', monospace;
@@ -55,17 +55,8 @@ body {
 #content {
     background: #FFFFFF;
      max-width: 2480px;
-    width:100%;
+  
 }
-  #table{
-    max-width: 2480px;
-    width:100%;
-  }
-  #table td{
-    width: auto;
-    overflow: hidden;
-    word-wrap: break-word;
-  }
 </style>
 
 
@@ -86,79 +77,26 @@ body {
  <h1>Injury Reserve Production Advance</h1>
 <hr />
 
-<div class="divTable">
-<div class="divTableBody">
-<div class="divTableRow">
-<div class="divTableCell">
-<p>&nbsp;</p>
-<div class="divTable">
-<div class="divTableBody">
-<div class="divTableRow">
-<div class="divTableCell">
-<p><strong>Artist&nbsp;Manager:&nbsp; &nbsp;</strong></p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-</div>
-<div class="divTableCell">
-<p>Nick Herbert<br />nherbertaz@gmail.com<br />(480) 433-1104</p>
-<p>&nbsp;</p>
-</div>
-</div>
-<div class="divTableRow">
-<div class="divTableCell">
-<p><strong>Tour / Production Manager:&nbsp; &nbsp;</strong></p>
-<p>&nbsp;</p>
-</div>
-<div class="divTableCell">
-<p>Will Hasty<br />wHasty@NoBilling.Info<br />(773) 234-2789</p>
-</div>
-</div>
-</div>
-</div>
-<p>&nbsp;</p>
-</div>
-<div class="divTableCell">
-<div class="divTable">
-<div class="divTableBody">
-<div class="divTableRow">
-<div class="divTableCell"><strong>Artist:&nbsp; &nbsp;</strong></div>
-<div class="divTableCell">Parker Corey (Producer)</div>
-</div>
-<div class="divTableRow">
-<div class="divTableCell">&nbsp;</div>
-<div class="divTableCell">Nathaniel Ritchie (Vocals)</div>
-</div>
-<div class="divTableRow">
-<div class="divTableCell">&nbsp;</div>
-<div class="divTableCell">Jordan Groggs (Vocals)</div>
-</div>
-</div>
-</div>
-&nbsp;
-<div class="divTable">
-<div class="divTableBody">
-<div class="divTableRow">
-<div class="divTableCell"><span style="text-decoration: underline;"><strong>Social Media</strong></span></div>
-<div class="divTableCell"><span style="text-decoration: underline;"><strong>Identifier</strong></span></div>
-</div>
-<div class="divTableRow">
-<div class="divTableCell">Website</div>
-<div class="divTableCell">http://injuryreserve.online/</div>
-</div>
-<div class="divTableRow">
-<div class="divTableCell">Instagram</div>
-<div class="divTableCell">@InjuryReserve</div>
-</div>
-<div class="divTableRow">
-<div class="divTableCell">Twitter</div>
-<div class="divTableCell">@InjuryReserve</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
+<table width="70%" border="1" cellspacing="1" cellpadding="5">
+<tbody>
+<tr>
+<td>
+<p style="text-align: center;">Artist&nbsp;Manager: Nick Herbert<br /><a href="mailto:nherbertaz@gmail.com" target="_blank" rel="noopener">nherbertaz@gmail.com</a><br /><a href="tel:+014804331104">+1 (480) 433-1104</a></p>
+</td>
+<td>
+<p style="text-align: center;">Artist:&nbsp; &nbsp;<br />Parker Corey (Producer)<br />Nathaniel Ritchie (Vocals)<br />Jordan Groggs (Vocals)</p>
+</td>
+</tr>
+<tr>
+<td>
+<p style="text-align: center;">Tour / Production Manager: Will Hasty<br /><a href="mailto:wHasty@NoBilling.Info" target="_blank" rel="noopener">wHasty@NoBilling.Info</a><br /><a href="tel:+017732342789">+1 (773) 234-2789</a></p>
+</td>
+<td>
+<p style="text-align: center;">Online:<br /><a href="http://injuryreserve.online/" target="_blank" rel="noopener">http://injuryreserve.online/</a><br /><a href="http://www.instagram.com/injuryreserve/" target="_blank" rel="noopener">Instagram: @InjuryReserve</a><br /><a href="http://twitter.com/injuryreserve/" target="_blank" rel="noopener">Twitter: @InjuryReserve</a></p>
+</td>
+</tr>
+</tbody>
+</table>
 
 <div id="KeyInfo"><h2>Key Info</h2></div>
 <hr />
