--- a/RideTest.html
+++ b/RideTest.html
@@ -81,18 +81,18 @@ body {
 <tbody>
 <tr>
 <td>
-<p style="width: 50%; text-align: center;">Artist&nbsp;Manager: Nick Herbert<br /><a href="mailto:nherbertaz@gmail.com" target="_blank" rel="noopener">nherbertaz@gmail.com</a><br /><a href="tel:+014804331104">+1 (480) 433-1104</a></p>
+<p style="text-align: center;">Artist&nbsp;Manager: Nick Herbert<br /><a href="mailto:nherbertaz@gmail.com" target="_blank" rel="noopener">nherbertaz@gmail.com</a><br /><a href="tel:+014804331104">+1 (480) 433-1104</a></p>
 </td>
 <td>
-<p style="width: 50%; text-align: center;">Artist:&nbsp; &nbsp;<br />Parker Corey (Producer)<br />Nathaniel Ritchie (Vocals)<br />Jordan Groggs (Vocals)</p>
+<p style="text-align: center;">Artist:&nbsp; &nbsp;<br />Parker Corey (Producer)<br />Nathaniel Ritchie (Vocals)<br />Jordan Groggs (Vocals)</p>
 </td>
 </tr>
 <tr>
 <td>
-<p style="width: 50%; text-align: center;">Tour / Production Manager: Will Hasty<br /><a href="mailto:wHasty@NoBilling.Info" target="_blank" rel="noopener">wHasty@NoBilling.Info</a><br /><a href="tel:+017732342789">+1 (773) 234-2789</a></p>
+<p style="text-align: center;">Tour / Production Manager: Will Hasty<br /><a href="mailto:wHasty@NoBilling.Info" target="_blank" rel="noopener">wHasty@NoBilling.Info</a><br /><a href="tel:+017732342789">+1 (773) 234-2789</a></p>
 </td>
 <td>
-<p style="width: 50%; text-align: center;">Online:<br /><a href="http://injuryreserve.online/" target="_blank" rel="noopener">http://injuryreserve.online/</a><br /><a href="http://www.instagram.com/injuryreserve/" target="_blank" rel="noopener">Instagram: @InjuryReserve</a><br /><a href="http://twitter.com/injuryreserve/" target="_blank" rel="noopener">Twitter: @InjuryReserve</a></p>
+<p style="text-align: center;">Online:<br /><a href="http://injuryreserve.online/" target="_blank" rel="noopener">http://injuryreserve.online/</a><br /><a href="http://www.instagram.com/injuryreserve/" target="_blank" rel="noopener">Instagram: @InjuryReserve</a><br /><a href="http://twitter.com/injuryreserve/" target="_blank" rel="noopener">Twitter: @InjuryReserve</a></p>
 </td>
 </tr>
 </tbody>
