--- a/RideTest.html
+++ b/RideTest.html
@@ -9,61 +9,13 @@
 
   <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300" rel="stylesheet">
+  <link rel="stylesheet" href="css/paper.css">
 
-<style type="text/css">
-
-body {
-    background-color: #FFFFFF;
-    color: #000000;
-    font-family: 'Work Sans', sans-serif;
-    font-size: 19px;
-    letter-spacing: auto;
-    line-height: auto;
-    margin: 2.5% 20% 15%;
-        max-width: 2480px;
-    
-  }
-  h1 {
-  	font-family: 'VT323', monospace;
-    font-size: 60px;
-    text-align: center;
-    ;
-  }
-  h2 {
-  	font-family: 'VT323', monospace;
-    font-size: 45px;
-    margin-left: 5%
-  }
-   h3 {
-  	font-family: 'VT323', monospace;
-    font-size: 36px;
-    margin-left: 1.5%
-  }
-    
-  a
-  {
-     color: #000000;
-    text-decoration: none;
-  }
-  .center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-}
-}
-#content {
-    background: #FFFFFF;
-     max-width: 2480px;
-  
-}
-</style>
-
-
+  <style>@page { size: A4 }</style>
 
   </head>
 
-  <body>
+  <body class="A4">
   	<a href="#KeyInfo">Key Info</a> |
 <a href="#Gear">Gear + Backline</a> |
 <a href="#Inputs">Inputs + Mixes</a> |
