--- a/RideTest.html
+++ b/RideTest.html
@@ -41,7 +41,7 @@
 </tr>
 <tr>
 <td>
-<p style="text-align: center;">Tour / Production Manager: Will Hasty<br /><a href="mailto:wHasty@NoBilling.Info" target="_blank" rel="noopener">wHasty@NoBilling.Info</a><br /><a href="tel:+017732342789">+1 (773) 234-2789</a></p>
+<p style="text-align: center;">Production Manager: Will Hasty<br /><a href="mailto:wHasty@NoBilling.Info" target="_blank" rel="noopener">wHasty@NoBilling.Info</a><br /><a href="tel:+017732342789">+1 (773) 234-2789</a></p>
 </td>
 <td>
 <p style="text-align: center;">Online:<br /><a href="http://injuryreserve.online/" target="_blank" rel="noopener">http://injuryreserve.online/</a><br /><a href="http://www.instagram.com/injuryreserve/" target="_blank" rel="noopener">Instagram: @InjuryReserve</a><br /><a href="http://twitter.com/injuryreserve/" target="_blank" rel="noopener">Twitter: @InjuryReserve</a></p>
