--- a/RideTest.html
+++ b/RideTest.html
@@ -9,9 +9,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300" rel="stylesheet">
-  <link rel="stylesheet" href="css/paper.css">
-
-  <style>@page { size: A4 }</style>
+  <link rel="stylesheet" href="css/IRStylr.css">
 
   </head>
 
