--- a/RideTest.html
+++ b/RideTest.html
@@ -9,11 +9,11 @@
 
   <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300" rel="stylesheet">
-  <link rel="stylesheet" href="css/IRStylr.css">
+  <link rel="stylesheet" href="css/Rider.css">
 
   </head>
 
-  <body class="A4">
+  <body class="body">
   	<a href="#KeyInfo">Key Info</a> |
 <a href="#Gear">Gear + Backline</a> |
 <a href="#Inputs">Inputs + Mixes</a> |
