--- a/RideTest.html
+++ b/RideTest.html
@@ -27,21 +27,22 @@
 
 <h1>Injury Reserve Production Advance</h1>
 <hr />
-<table id="Header" style="border-collapse: collapse; width: 500px; height: 207px; margin-left: auto; margin-right: auto;" border="1">
+
+<table id="Header" style="border-collapse: collapse; width: 75%; height: 207px; margin-left: auto; margin-right: auto;" border="1">
 <tbody>
 <tr>
-<td style="width: 245px;">
+<td style="width: 50%;">
 <p style="text-align: center;">Artist&nbsp;Manager: Nick Herbert<br /><a href="mailto:nherbertaz@gmail.com" target="_blank" rel="noopener">nherbertaz@gmail.com</a><br /><a href="tel:+014804331104">+1 (480) 433-1104</a></p>
 </td>
-<td style="width: 248px;">
+<td style="width: 50%;">
 <p style="text-align: center;">Artist:&nbsp; &nbsp;<br />Parker Corey (Producer)<br />Nathaniel Ritchie (Vocals)<br />Jordan Groggs (Vocals)</p>
 </td>
 </tr>
 <tr>
-<td style="width: 245px;">
+<td style="width: 50%;">
 <p style="text-align: center;">Production Manager: Will Hasty<br /><a href="mailto:wHasty@NoBilling.Info" target="_blank" rel="noopener">wHasty@NoBilling.Info</a><br /><a href="tel:+017732342789">+1 (773) 234-2789</a></p>
 </td>
-<td style="width: 248px;">
+<td style="width: 50%;">
 <p style="text-align: center;">Online:<br /><a href="http://injuryreserve.online/" target="_blank" rel="noopener">http://injuryreserve.online/</a><br /><a href="http://www.instagram.com/injuryreserve/" target="_blank" rel="noopener">Instagram: @InjuryReserve</a><br /><a href="http://twitter.com/injuryreserve/" target="_blank" rel="noopener">Twitter: @InjuryReserve</a></p>
 </td>
 </tr>
@@ -59,7 +60,7 @@
 <hr />
 <p><span>Purchaser agrees to provide a&nbsp;</span>professional audio system capable of producing 110dbA without distortion, without the engagement of any limiting, and without danger of failure or thermal protection. A professional quality, properly tuned, time-aligned speaker system with even coverage (+/- 3db) throughout the audience areas of the venue or festival.</p>
 
-<table id="backline" border="1" style="border-collapse: collapse; width: 100%;">
+<table id="backline" border="1" style="border-collapse: collapse; width: 85%;">
 <tbody>
 <tr style="height: 21px;">
 <td style="width: 50%; height: 21px; text-align: left;"><strong>&nbsp; &nbsp;Backline Needed</strong></td>
@@ -101,7 +102,7 @@
 
 <div id="Inputs"><h2>Inputs + Mixes</h2></div>
 <hr />
-<table id="inputlist" border="1" style="border-collapse: collapse; width: 100%;">
+<table id="inputlist" border="1" style="border-collapse: collapse; width: 65%;">
 <tbody>
 <tr>
 <td style="width: 50%; text-align: center;"><span style="text-decoration: underline;"><strong>Inputs</strong></span></td>
@@ -141,7 +142,7 @@
 <div id="Hospitality"><h3>Hospitality</h3></div>
 <hr />
 
-<table id="Hospo" border="1" style="border-collapse: collapse; width: 100%;">
+<table id="Hospo" border="1" style="border-collapse: collapse; width: 85%;">
 <tbody>
 <tr>
 <td style="width: 50%;">
@@ -169,7 +170,7 @@
 
 <div id="TravelParty"><h2>Travel&nbsp;Party</h2></div>
 <p>All Talent and Crew are 21+</p>
-<table id="travel" border="1" style="border-collapse: collapse; width: 100%;">
+<table id="travel" border="1" style="border-collapse: collapse; width: 75%;">
 <tbody>
 <tr style="height: 21px;">
 <td style="width: 25%; height: 21px; text-align: center;"><span style="text-decoration: underline;"><strong>Name</strong></td>
