--- a/RideTest.html
+++ b/RideTest.html
@@ -49,12 +49,13 @@
 </tbody>
 </table>
 
-<div id="KeyInfo"><h2>Key Info</h2></div>
+<div id="KeyInfo"><h2>Key Info</h2>
 <hr />
 <p>Injury Reserve (IR) consists of 2 Vocalist and a Producer.&nbsp;<br />Will require 2 Wireless Microphones (Does NOT carry)<br />One Wired Mic will run through some processing and be sent back to you (through our own DI)<br />One Wireless Mic will need to be routed through one of our pedals (DSR). It will be processed and sent back.<br />The remaining two inputs are L+R Audio Track & Talk Back to FOH<br />All Lines connect to house as XLR<br />6 Inputs Total<br />Injury Reserve's gear will run off of 110v Power.<br />Traveling Party is 6 total.<br />We are not traveling with an Audio Engineer. The TM will double as LD.</p>
 <div class="page" title="Page 3">
 <div class="layoutArea">
 <div class="column">
+  </div>
 
 <div id="Gear"><h2><span>Gear + Backline</span></h2></div>
 <hr />
