--- a/RideTest.html
+++ b/RideTest.html
@@ -49,15 +49,14 @@
 </tbody>
 </table>
 
+
 <div id="KeyInfo"><h2>Key Info</h2>
 <hr />
 <p>Injury Reserve (IR) consists of 2 Vocalist and a Producer.&nbsp;<br />Will require 2 Wireless Microphones (Does NOT carry)<br />One Wired Mic will run through some processing and be sent back to you (through our own DI)<br />One Wireless Mic will need to be routed through one of our pedals (DSR). It will be processed and sent back.<br />The remaining two inputs are L+R Audio Track & Talk Back to FOH<br />All Lines connect to house as XLR<br />6 Inputs Total<br />Injury Reserve's gear will run off of 110v Power.<br />Traveling Party is 6 total.<br />We are not traveling with an Audio Engineer. The TM will double as LD.</p>
-<div class="page" title="Page 3">
-<div class="layoutArea">
-<div class="column">
-  </div>
+</div>
 
-<div id="Gear"><h2><span>Gear + Backline</span></h2></div>
+
+<div id="Gear"><h2><span>Gear + Backline</span></h2>
 <hr />
 <p><span>Purchaser agrees to provide a&nbsp;</span>professional audio system capable of producing 110dbA without distortion, without the engagement of any limiting, and without danger of failure or thermal protection. A professional quality, properly tuned, time-aligned speaker system with even coverage (+/- 3db) throughout the audience areas of the venue or festival.</p>
 
@@ -100,8 +99,9 @@
 <p></p>
 <p>All Carried Gear runs on 110v Power.&nbsp;<br />Need the local equivalent of 2x 15+ Amp circuits w/ US Type B 3 Pin Outlets<br />One USC for Producer (4 Outlets)<br />One DSR for Vocal Processing (4 Outlets)</p>
 <p></p>
+</div>
 
-<div id="Inputs"><h2>Inputs + Mixes</h2></div>
+<div id="Inputs"><h2>Inputs + Mixes</h2>
 <hr />
 <table id="inputlist" border="1" style="border-collapse: collapse; width: 55%;">
 <tbody>
@@ -119,18 +119,18 @@
 </table>
 <p></p>
 <p>Inputs 1-4 will got into all Monitor Mixes.<br />Input 5 "Effects Vocal 1" will ONLY be in Mix 3<br />This is to prevent feedback due to heavy processing.<br />Monitor Mix 3 will match Mix 2, only with Effects Vocal 1 added.&nbsp;</p>
-<div id="StagePlots"><h2>Stage Plot</h2></div>
+</div>
+<div id="StagePlots"><h2>Stage Plot</h2>
 <hr />
 <img src="https://i.imgur.com/FuTKWeM.jpg" class="center"><br>
 <a href="https://drive.google.com/file/d/1IpxosYsbInWlJicEJUC5yrEuA0pHldv_/view?usp=sharing"><span style="text-decoration: underline;">Download as .PDF</span></a><br>
 <a href="https://drive.google.com/file/d/10XpYXh0zuQSHFewrvEZ0IIcuo6SJj2Di/view?usp=sharing"><span style="text-decoration: underline;">Download as .JPG</span></a>
 <p></p>
+</div>
+
 <h2></h2>
 
-<div class="page" title="Page 9">
-<div class="layoutArea">
-<div class="column">
-<div id="Backstage"><h2>Backstage</h2></div>
+<div id="Backstage"><h2>Backstage</h2>
 <hr />
 <div id="DressingRooms"><h3><span></span>Dressing Rooms</h3></div>
 <p>Injury Reserve&nbsp;<span>will need (1) dressing room&nbsp;</span>for the sole use of Injury Reserve (NO OPENING ACTS - NO PRESS). No person other than Injiury Reserve and crew shall have access to the dressing room without the prior permission of Artist Manager.<span><br />Please plan to leave the dressing rooms open at least (60) minutes after loadout.</span></p>
@@ -139,9 +139,9 @@
 <p>Please provide a clean, well lit, quiet production office (preferably away from the stage) with table, desk chair, working internet, and access to printer.<br />This room should be locked at all times. The keys are to be given to Artist &amp; Tour Manager upon the time of arrival at the venue.</p>
 <div id="Meals"><h3>Meals</h3></div>
 <p>If you are not providing a catered meal, please have a "menu book" available in the Production Office with lunch and dinner options.<br />Please note there are Vegetarians and Vegans in the touring party and need to have equal options avialable.<br />Buyout to be provided in Cash upon arrival if a hot meal is not available.</p>
+</div>
 
-<div id="Hospitality"><h3>Hospitality</h3></div>
-<hr />
+<div id="Hospitality"><h3>Hospitality</h3>
 
 <table id="Hospo" border="1" style="border-collapse: collapse; width: 85%;">
 <tbody>
@@ -168,8 +168,10 @@
 </div>
 </div>
 </div>
+</div>
 
-<div id="TravelParty"><h2>Travel&nbsp;Party</h2></div>
+<div id="TravelParty"><h2>Travel&nbsp;Party</h2>
+  <hr />
 <p>All Talent and Crew are 21+</p>
 <table id="travel" border="1" style="border-collapse: collapse; width: 65%;">
 <tbody>
@@ -211,6 +213,7 @@
 </tbody>
 </table>
 <p></p>
+</div>
 </div>
 </div>
 </div>
