--- a/RideTest.html
+++ b/RideTest.html
@@ -110,7 +110,7 @@
 <td style="width: 50%; text-align: center;"><strong><span style="text-decoration: underline;">Monitor Mixes</span></strong></td>
 </tr>
 <tr>
-<td style="width: 50%; text-align: left; padding-left: 60px;">1. Track L<br />2. Track R<br />3. Nate Vocal* <br />4. Groggs Vocal (Dry)<br />5. Effects Vocal 1*  <br />6 Talkback to FOH <p style="font-size: 75%;">* =Processed Onstage</p></td>
+<td style="width: 50%; text-align: left; padding-left: 60px;"><br>1. Track L<br />2. Track R<br />3. Nate Vocal* <br />4. Groggs Vocal (Dry)<br />5. Effects Vocal 1*  <br />6 Talkback to FOH <p style="font-size: 75%;">* =Processed Onstage</p></td>
 <td style="width: 50%;">
 <p style="padding-left: 60px;">1. Producer Wedge<br />2. DSR-DSC Wedges 1-3<br />3. DSL Wedge</p>
 </td>
