--- a/RideTest.html
+++ b/RideTest.html
@@ -43,7 +43,7 @@
 <p style="text-align: center;">Production Manager: Will Hasty<br /><a href="mailto:wHasty@NoBilling.Info" target="_blank" rel="noopener">wHasty@NoBilling.Info</a><br /><a href="tel:+017732342789">+1 (773) 234-2789</a></p>
 </td>
 <td style="width: 50%;">
-<p style="text-align: center;">Online:<br /><a href="http://injuryreserve.online/" target="_blank" rel="noopener">http://injuryreserve.online/</a><br /><a href="http://www.instagram.com/injuryreserve/" target="_blank" rel="noopener">Instagram: @InjuryReserve</a><br /><a href="http://twitter.com/injuryreserve/" target="_blank" rel="noopener">Twitter: @InjuryReserve</a></p>
+<p style="text-align: center;">Online:<br /><a href="http://injuryreserve.online/" target="_blank" rel="noopener">injuryreserve.online/</a><br /><a href="http://www.instagram.com/injuryreserve/" target="_blank" rel="noopener">Instagram: @InjuryReserve</a><br /><a href="http://twitter.com/injuryreserve/" target="_blank" rel="noopener">Twitter: @InjuryReserve</a></p>
 </td>
 </tr>
 </tbody>
@@ -122,7 +122,7 @@
 </div>
 <div id="StagePlots"><h2>Stage Plot</h2>
 <hr />
-<img src="https://i.imgur.com/FuTKWeM.jpg" class="center"><br>
+<img src="https://i.imgur.com/FuTKWeM.jpg" class="center" width="80%"><br>
 <a href="https://drive.google.com/file/d/1IpxosYsbInWlJicEJUC5yrEuA0pHldv_/view?usp=sharing"><span style="text-decoration: underline;">Download as .PDF</span></a><br>
 <a href="https://drive.google.com/file/d/10XpYXh0zuQSHFewrvEZ0IIcuo6SJj2Di/view?usp=sharing"><span style="text-decoration: underline;">Download as .JPG</span></a>
 <p></p>
