--- a/RideTest.html
+++ b/RideTest.html
@@ -3,14 +3,12 @@
 <head>
 
   <meta name="viewport" content="width=device-width, initial-scale=0.86">
-
   <meta charset="UTF-8">
   <title>RDR IR TST</title>
-
   <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300" rel="stylesheet">
-  <link rel="stylesheet" href="css/Rider.css">
-
+  <link rel="stylesheet" type="text/css" href="css/Rider.css" mce_href="css/Rider.css" href="css/Rider.css" mce_href="css/Rider.css" media="all" />
+  <link rel="stylesheet" type="text/css" href="css/print.css" mce_href="css/print.css" href="css/print.css" mce_href="css/print.css" media="print" />
   </head>
 
   <body class="body">
