--- a/RideTest.html
+++ b/RideTest.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" href="css/print.css" mce_href="css/print.css" href="css/print.css" mce_href="css/print.css" media="print" />
   </head>
 
-  <body class="body">
+  <body class="body" class='no-print'>
   	<a href="#KeyInfo">Key Info</a> |
 <a href="#Gear">Gear + Backline</a> |
 <a href="#Inputs">Inputs + Mixes</a> |
