--- a/RideTest.html
+++ b/RideTest.html
@@ -11,17 +11,7 @@
   <link rel="stylesheet" type="text/css" href="css/print.css" mce_href="css/print.css" href="css/print.css" mce_href="css/print.css" media="print" />
   </head>
 
-  <body class="body" class='no-print'>
-  	<a href="#KeyInfo">Key Info</a> |
-<a href="#Gear">Gear + Backline</a> |
-<a href="#Inputs">Inputs + Mixes</a> |
-<a href="#StagePlots">Stage Plots</a> |
-
-<a href="#DressingRooms">Dressing Rooms</a> |
-<a href="#Office">Production Office</a> |
-<a href="#Meals">Meals</a> |
-<a href="#Hospitality">Hospo</a> |
-<a href="#TravelParty">Travel Party</a>
+  <body class="body">
 
 <h1>Injury Reserve Production Advance</h1>
 <hr />
