--- a/RideTest.html
+++ b/RideTest.html
@@ -43,6 +43,7 @@
 <p>Injury Reserve (IR) consists of 2 Vocalist and a Producer.&nbsp;<br />Will require 2 Wireless Microphones (Does NOT carry)<br />One Wired Mic will run through some processing and be sent back to you (through our own DI)<br />One Wireless Mic will need to be routed through one of our pedals (DSR). It will be processed and sent back.<br />The remaining two inputs are L+R Audio Track & Talk Back to FOH<br />All Lines connect to house as XLR<br />6 Inputs Total<br />Injury Reserve's gear will run off of 110v Power.<br />Traveling Party is 6 total.<br />We are not traveling with an Audio Engineer. The TM will double as LD.</p>
 </div>
 
+<p style="page-break-before: always">
 
 <div id="Gear"><h2><span>Gear + Backline</span></h2>
 <hr />
@@ -89,6 +90,8 @@
 <p></p>
 </div>
 
+<p style="page-break-before: always">
+
 <div id="Inputs"><h2>Inputs + Mixes</h2>
 <hr />
 <table id="inputlist" border="1" style="border-collapse: collapse; width: 55%;">
@@ -118,6 +121,8 @@
 
 <h2></h2>
 
+<p style="page-break-before: always">
+
 <div id="Backstage"><h2>Backstage</h2>
 <hr />
 <div id="DressingRooms"><h3><span></span>Dressing Rooms</h3></div>
@@ -128,6 +133,8 @@
 <div id="Meals"><h3>Meals</h3></div>
 <p>If you are not providing a catered meal, please have a "menu book" available in the Production Office with lunch and dinner options.<br />Please note there are Vegetarians and Vegans in the touring party and need to have equal options avialable.<br />Buyout to be provided in Cash upon arrival if a hot meal is not available.</p>
 </div>
+
+<p style="page-break-before: always">
 
 <div id="Hospitality"><h3>Hospitality</h3>
 <br>
@@ -158,6 +165,8 @@
 </div>
 </div>
 
+<p style="page-break-before: always">
+  
 <div id="TravelParty"><h2>Travel&nbsp;Party</h2>
   <hr />
 <p>All Talent and Crew are 21+</p>
