--- a/RideTest.html
+++ b/RideTest.html
@@ -47,6 +47,8 @@
 <hr />
 <p><span>Purchaser agrees to provide a&nbsp;</span>professional audio system capable of producing 110dbA without distortion, without the engagement of any limiting, and without danger of failure or thermal protection. A professional quality, properly tuned, time-aligned speaker system with even coverage (+/- 3db) throughout the audience areas of the venue or festival.</p>
 
+<p style="page-break-before: always">
+
 <table id="backline" border="1" style="border-collapse: collapse; width: 75%;">
 <tbody>
 <tr style="height: 21px;">
@@ -88,6 +90,7 @@
 <p></p>
 </div>
 
+<p style="page-break-before: always">
 
 <div id="Inputs"><h2>Inputs + Mixes</h2>
 <hr />
@@ -118,6 +121,7 @@
 
 <h2></h2>
 
+<p style="page-break-before: always">
 
 <div id="Backstage"><h2>Backstage</h2>
 <hr />
