--- a/RideTest.html
+++ b/RideTest.html
@@ -44,12 +44,12 @@
 </div>
 
 <p style="page-break-before: always">
-  
+
 <div id="Gear"><h2><span>Gear + Backline</span></h2>
 <hr />
 <p><span>Purchaser agrees to provide a&nbsp;</span>professional audio system capable of producing 110dbA without distortion, without the engagement of any limiting, and without danger of failure or thermal protection. A professional quality, properly tuned, time-aligned speaker system with even coverage (+/- 3db) throughout the audience areas of the venue or festival.</p>
 
-<table id="backline" border="1" style="border-collapse: collapse; width: 75%;">
+<table id="backline" border="1">
 <tbody>
 <tr style="height: 21px;">
 <td style="width: 50%; height: 21px; text-align: left;"><strong>&nbsp; &nbsp;Backline Needed</strong></td>
