--- a/RideTest.html
+++ b/RideTest.html
@@ -55,12 +55,12 @@
 <td style="width: 50%; height: 21px; text-align: left;"><strong>&nbsp; &nbsp;Backline Needed</strong></td>
 <td style="width: 50%; height: 21px; text-align: right;"><strong>Carried&nbsp; &nbsp;</strong></td>
 </tr>
-<tr style="height: 121px;">
-<td style="width: 50%; height: 121px;">
+<tr>
+<td style="width: 50%;">
 <p style="text-align: center;">2 Wireless Microphone</p>
 <p style="text-align: center;"><sub>(Shure UHF-R at Minimum, not ULX, no PRG or PGX)</sub><br /><span style="text-decoration: underline;">Must to be&nbsp;approved&nbsp;by TM PRIOR to DOS.</span></p>
 </td>
-<td style="width: 50%; height: 121px; text-align: center;">
+<td style="width: 50%; text-align: center;">
 <p></p>
 <p></p>
 <p>Injury Reserve carries the following:</p>
@@ -68,7 +68,7 @@
 </tr>
 <tr style="height: 14px;">
 <td style="width: 50%; height: 21px; text-align: center;">2 Wired Shure SM58 Microphones</td>
-<td style="width: 50%; height: 21px; text-align: center;">Laptops, Audio Interfaces, DI Boxes, and Controllers</td>
+<td style="width: 50%; height: 21px; text-align: center;">Laptops, Interfaces, DI Boxes, and Controllers</td>
 </tr>
 <tr style="height: 21px;">
 <td style="width: 50%; height: 21px; text-align: center;">2 Straight Mic Stands</td>
