--- a/RideTest.html
+++ b/RideTest.html
@@ -16,7 +16,7 @@
 <h1>Injury Reserve Production Advance</h1>
 <hr />
 
-<table id="Header" style="border-collapse: collapse; width: 65%; height: 207px; margin-left: auto; margin-right: auto;" border="1">
+<table id="Header" border="1">
 <tbody>
 <tr>
 <td style="width: 50%;">
@@ -94,7 +94,7 @@
 
 <div id="Inputs"><h2>Inputs + Mixes</h2>
 <hr />
-<table id="inputlist" border="1" style="border-collapse: collapse; width: 55%;">
+<table id="inputlist" border="1">
 <tbody>
 <tr>
 <td style="width: 50%; text-align: center;"><span style="text-decoration: underline;"><strong>Inputs</strong></span></td>
