--- a/RideTest.html
+++ b/RideTest.html
@@ -13,6 +13,8 @@
 
   <body class="body">
 
+  <img src="images/header.png" class="center" width="100%"><br>
+
 <h1>Injury Reserve Production Advance</h1>
 <hr />
 
