--- a/RideTest.html
+++ b/RideTest.html
@@ -13,7 +13,7 @@
 
 <body class="body">
 
-<img src="https://i.imgur.com/xmsc8YT.png" align="center" width="90%"><br>
+<img src="https://i.imgur.com/xmsc8YT.png" align="center" width="90%" p class="aligncenter"><br>
 
 <h1>Injury Reserve Production Advance</h1>
 
