--- a/RideTest.html
+++ b/RideTest.html
@@ -13,7 +13,7 @@
 
 <body class="body">
 
-<img src="https://i.imgur.com/xmsc8YT.png" align="center" width="60%" p class="aligncenter">
+<img src="https://i.imgur.com/xmsc8YT.png" style="display: block; margin-left: auto; margin-right: auto;">
 <h1>Injury Reserve Production Advance</h1>
 
 <hr />
