--- a/NBinfo.html
+++ b/NBinfo.html
@@ -66,7 +66,20 @@
 <br>
 <br>
 <p dir="rtl">
-<iframe src="https://calendar.google.com/calendar/embed?showNav=0&amp;showPrint=0&amp;showCalendars=0&amp;mode=AGENDA&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=whasty%40nobilling.info&amp;color=%231B887A&amp;src=nobilling.info_ig75ug43bpr5afp3vbtv0jgcjo%40group.calendar.google.com&amp;color=%238C500B&amp;src=nobilling.info_r5b44h6020vqak5johk87ti64g%40group.calendar.google.com&amp;color=%230F4B38&amp;src=nobilling.info_dc1q5jlacbg7jmm5detd1jp64k%40group.calendar.google.com&amp;color=%235229A3&amp;src=en.usa%23holiday%40group.v.calendar.google.com&amp;color=%23125A12&amp;src=nobilling.info_v298bssr5r8qa1f4sdrn7u1n20%40group.calendar.google.com&amp;color=%231B887A&amp;src=injuryreserve%40gmail.com&amp;color=%23e6c800&amp;src=nobilling.info_9vdsjgj7c4r18kqu8gtmsv9mlk%40group.calendar.google.com&amp;color=%23AB8B00&amp;src=nobilling.info_p7r549utvhakckqapul5gpo5vg%40group.calendar.google.com&amp;color=%2344a703&amp;src=nobilling.info_pm5mj9vrnb9srivr4nnq1g9j0c%40group.calendar.google.com&amp;color=%2342104A&amp;src=0hq2bv58t7vclbr6p8h5hdugcnh3l86c%40import.calendar.google.com&amp;color=%232F6309&amp;ctz=America%2FLos_Angeles" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+
+<p dir="rtl">
+Sunday, March 10 • El Rey • Zoe • LD <br>
+TH 03.14.2019 • El Rey • Conan Gray • LD <br>
+FR 03.15.2019 • El Rey • Conan Gray • LD <br>
+SU 03.17.2019 • El Rey • Zoe • LD <br>
+MO 03.18.2019 • El Rey • Japan Foundation • LD <br>
+WE 03.20.2019 • El Rey • Mandolin Orange • LD <br>
+FR 03.22.2019 • El Rey • Private Island • LD <br>
+SA 03.23.2019 • El Rey • Morgan Wallen • LD <br>
+SU 03.20.2019 • El Rey • Zoe • LD <br>
+WE 03.20.2019 • El Rey • Mandolin Orange • LD <br>
+<s>SU 03.31.2019 • El Rey • Ella Voss • LD/s><br>
+
 </p>
 
 </body>
