--- a/NBinfo.html
+++ b/NBinfo.html
@@ -68,17 +68,37 @@
 <p dir="rtl">
 
 <p dir="rtl">
-Sunday, March 10 • El Rey • Zoe • LD <br>
-TH 03.14.2019 • El Rey • Conan Gray • LD <br>
-FR 03.15.2019 • El Rey • Conan Gray • LD <br>
-SU 03.17.2019 • El Rey • Zoe • LD <br>
-MO 03.18.2019 • El Rey • Japan Foundation • LD <br>
-WE 03.20.2019 • El Rey • Mandolin Orange • LD <br>
-FR 03.22.2019 • El Rey • Private Island • LD <br>
-SA 03.23.2019 • El Rey • Morgan Wallen • LD <br>
-SU 03.20.2019 • El Rey • Zoe • LD <br>
-WE 03.20.2019 • El Rey • Mandolin Orange • LD <br>
-<s>SU 03.31.2019 • El Rey • Ella Voss • LD/s><br>
+FR  Mar.08.2019<br>
+SA  Mar.09.2019<br>
+SU  Mar.10.2019 • El Rey • Zoe • LD <br>
+MO  Mar.11.2019<br>
+TU  Mar.12.2019<br>
+WE  Mar.13.2019<br>
+TH  Mar.14.2019 • El Rey • Conan Gray • LD <br>
+FR  Mar.15.2019 • El Rey • Conan Gray • LD <br>
+SA  Mar.16.2019<br>
+SU  Mar.17.2019 • El Rey • Zoe • LD <br>
+MO  Mar.18.2019 • El Rey • Japan Foundation • LD <br>
+TU  Mar.19.2019<br>
+WE  Mar.20.2019 • El Rey • Mandolin Orange • LD <br>
+TH  Mar.21.2019<br>
+FR  Mar.22.2019 • El Rey • Private Island • LD <br>
+SA  Mar.23.2019 • El Rey • Morgan Wallen • LD <br>
+SU  Mar.24.2019 • El Rey • Zoe • LD <br>
+MO  Mar.25.2019 • El Rey • Cat Empire • LD <br>
+TU  Mar.26.2019 • El Rey • Matt Nathanson • LD <br>
+WE  Mar.27.2019<br>
+TH  Mar.28.2019 • El Rey • Ryan Bingham • LD <br>
+FR  Mar.29.2019 • El Rey • Donna Missal • LD <br>
+SA  Mar.30.2019 • El Rey • Ella Voss • LD <br>
+SU  Mar.31.2019 • El Rey • Zoe • LD + <s> • El Rey • Ella Voss • LD/s> <br>
+MO  Apr.01.2019<br>
+TU  Apr.02.2019<br>
+WE  Apr.03.2019<br>
+TH  Apr.04.2019<br>
+FR  Apr.05.2019<br>
+SA  Apr.06.2019<br>
+SU  Apr.07.2019 • El Rey • Zoe • LD <br>
 
 </p>
 
