--- a/NBinfo.html
+++ b/NBinfo.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=0.86">
 
   <meta charset="UTF-8">
-  <title>HSTRYnLA</title>
+  <title>NBInfo Screen</title>
 
 <link rel="apple-touch-icon" sizes="180x180" href="Icons/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="Icons/favicon-32x32.png">
@@ -91,7 +91,7 @@ WE  Mar.27.2019<br>
 TH  Mar.28.2019 • El Rey • Ryan Bingham • LD <br>
 FR  Mar.29.2019 • El Rey • Donna Missal • LD <br>
 SA  Mar.30.2019 • El Rey • Ella Voss • LD <br>
-SU  Mar.31.2019 • El Rey • Zoe • LD + <s> • El Rey • Ella Voss • LD/s> <br>
+SU  Mar.31.2019 • El Rey • Zoe • LD + <s> • El Rey • Ella Voss • LD </s> <br>
 MO  Apr.01.2019<br>
 TU  Apr.02.2019<br>
 WE  Apr.03.2019<br>
