--- a/NBinfo.html
+++ b/NBinfo.html
@@ -91,7 +91,7 @@ WE  Mar.27.2019<br>
 TH  Mar.28.2019 • El Rey • Ryan Bingham • LD <br>
 FR  Mar.29.2019 • El Rey • Donna Missal • LD <br>
 SA  Mar.30.2019 • El Rey • Ella Voss • LD <br>
-SU  Mar.31.2019 • El Rey • Zoe • LD + <s> • El Rey • Ella Voss • LD </s> <br>
+SU  Mar.31.2019 • El Rey • Zoe • LD <br>
 MO  Apr.01.2019<br>
 TU  Apr.02.2019<br>
 WE  Apr.03.2019<br>
