--- a/NBinfo.html
+++ b/NBinfo.html
@@ -61,7 +61,7 @@
   <p class="timeRefSeconds">second</p>
      .elapsed </h1>
 </div>
-<p dir="rtl">
+<p dir="ltr">
 FR  • Mar.01.2019 •   •   • <br>
 SA  • Mar.02.2019 •   •   • <br>
 SU  • Mar.03.2019 • El Rey  • Zoe • <br>
