--- a/NBinfo.html
+++ b/NBinfo.html
@@ -46,7 +46,10 @@
 </head>
  
   <body>
-
+<table>
+<tbody>
+<tr>
+<td>
   <h1><div align="left">Arrival: 07.25.2018 11:01:13 PM PDT <br>
   N 33° 56' 46.5414''  W 118° 24' 28.7899'' </div>
 
@@ -61,7 +64,10 @@
   <p class="timeRefSeconds">second</p>
      .elapsed </h1>
 </div>
+</td>
+<td>
 <p dir="ltr">
+<marquee behavior="scroll" direction="up" scrollamount="5">
 FR  • Mar.01.2019 •   •   • <br>
 SA  • Mar.02.2019 •   •   • <br>
 SU  • Mar.03.2019 • El Rey  • Zoe • <br>
@@ -123,7 +129,11 @@ SA  • Apr.27.2019 •   •   • <br>
 SU  • Apr.28.2019 • El Rey  • Zoe • <br>
 MO  • Apr.29.2019 •   •   • <br>
 TU  • Apr.30.2019 •   •   • <br>
+</marquee>
 </p>
-
+</td>
+</tr>
+</tbody>
+</table>
 </body>
 </html>
