--- a/NBinfo.html
+++ b/NBinfo.html
@@ -67,8 +67,9 @@
 </td>
   <td></td>
 <td>
+  <div class="vertically">
+<p>
 <p dir="ltr">
-<marquee behavior="scroll" direction="up" scrollamount="1">
 FR  • Mar.01.2019 •   •   • <br>
 SA  • Mar.02.2019 •   •   • <br>
 SU  • Mar.03.2019 • El Rey  • Zoe • <br>
@@ -130,8 +131,9 @@ SA  • Apr.27.2019 •   •   • <br>
 SU  • Apr.28.2019 • El Rey  • Zoe • <br>
 MO  • Apr.29.2019 •   •   • <br>
 TU  • Apr.30.2019 •   •   • <br>
-</marquee>
 </p>
+</div>
+
 </td>
 </tr>
 </tbody>
