--- a/NBinfo.html
+++ b/NBinfo.html
@@ -70,44 +70,6 @@
   <div class="vertically">
 <p>
 <p dir="ltr">
-FR  • Mar.01.2019 •   •   • <br>
-SA  • Mar.02.2019 •   •   • <br>
-SU  • Mar.03.2019 • El Rey  • Zoe • <br>
-MO  • Mar.04.2019 •   •   • <br>
-TU  • Mar.05.2019 •   •   • <br>
-WE  • Mar.06.2019 •   •   • <br>
-TH  • Mar.07.2019 •   •   • <br>
-FR  • Mar.08.2019 •   •   • <br>
-SA  • Mar.09.2019 •   •   • <br>
-SU  • Mar.10.2019 • El Rey  • Zoe • <br>
-MO  • Mar.11.2019 •   •   • <br>
-TU  • Mar.12.2019 •   •   • <br>
-WE  • Mar.13.2019 •   •   • <br>
-TH  • Mar.14.2019 • El Rey  • Conan Gray  • <br>
-FR  • Mar.15.2019 • El Rey  • Conan Gray  • <br>
-SA  • Mar.16.2019 •   •   • <br>
-SU  • Mar.17.2019 • El Rey  • Zoe • <br>
-MO  • Mar.18.2019 • El Rey  • Japan Foundation  • <br>
-TU  • Mar.19.2019 •   •   • <br>
-WE  • Mar.20.2019 • El Rey  • Mandolin Orange • <br>
-TH  • Mar.21.2019 •   •   • <br>
-FR  • Mar.22.2019 • El Rey  • Private Island  • <br>
-SA  • Mar.23.2019 • El Rey  • Morgan Wallen • <br>
-SU  • Mar.24.2019 • El Rey  • Zoe • <br>
-MO  • Mar.25.2019 • El Rey  • Cat Empire  • <br>
-TU  • Mar.26.2019 • El Rey  • Matt Nathanson  • <br>
-WE  • Mar.27.2019 •   •   • <br>
-TH  • Mar.28.2019 • El Rey  • Ryan Bingham  • <br>
-FR  • Mar.29.2019 • El Rey  • Donna Missal  • <br>
-SA  • Mar.30.2019 • El Rey  • Ella Voss • <br>
-SU  • Mar.31.2019 • El Rey  • Zoe • <br>
-MO  • Apr.01.2019 •   •   • <br>
-TU  • Apr.02.2019 •   •   • <br>
-WE  • Apr.03.2019 •   •   • <br>
-TH  • Apr.04.2019 •   •   • <br>
-FR  • Apr.05.2019 •   •   • <br>
-SA  • Apr.06.2019 •   •   • <br>
-SU  • Apr.07.2019 • El Rey  • Zoe • <br>
 MO  • Apr.08.2019 •   •   • <br>
 TU  • Apr.09.2019 •   •   • <br>
 WE  • Apr.10.2019 •   •   • <br>
@@ -121,14 +83,14 @@ WE  • Apr.17.2019 • Ministry  • Toronto • <br>
 TH  • Apr.18.2019 • Ministry  •   • <br>
 FR  • Apr.19.2019 • Ministry  • Austin  • <br>
 SA  • Apr.20.2019 • Ministry  •   • <br>
-SU  • Apr.21.2019 • El Rey  • Zoe • <br>
+SU  • Apr.21.2019 •   •   • <br>
 MO  • Apr.22.2019 • Ministry  • San Fransisco • <br>
 TU  • Apr.23.2019 • Ministry  • Los Angles  • <br>
 WE  • Apr.24.2019 •   •   • <br>
 TH  • Apr.25.2019 •   •   • <br>
 FR  • Apr.26.2019 •   •   • <br>
 SA  • Apr.27.2019 •   •   • <br>
-SU  • Apr.28.2019 • El Rey  • Zoe • <br>
+SU  • Apr.28.2019 •   •   • <br>
 MO  • Apr.29.2019 •   •   • <br>
 TU  • Apr.30.2019 •   •   • <br>
 </p>
